<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="6dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivPhoto"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                tools:src="@drawable/ic_user_placeholder" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <ImageView
                    android:id="@+id/iv_image_fio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_account_circle" />

                <TextView
                    android:id="@+id/name_text"
                    style="@style/ProfileTextTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/iv_image_fio"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/etFio"
                    style="@style/ProfileTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name_text"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/iv_image_fio" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <ImageView
                    android:id="@+id/iv_image_birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_cake" />

                <TextView
                    android:id="@+id/tvBirthday"
                    style="@style/ProfileTextTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/iv_image_birthday"
                    android:text="@string/birthday_title" />

                <EditText
                    android:id="@+id/etBirthday"
                    style="@style/ProfileTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvBirthday"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/iv_image_birthday" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <ImageView
                    android:id="@+id/iv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_phone" />

                <TextView
                    android:id="@+id/tvPhone"
                    style="@style/ProfileTextTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/iv_phone"
                    android:text="@string/phone_title" />

                <EditText
                    android:id="@+id/etPhone"
                    style="@style/ProfileTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvPhone"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/iv_phone" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <ImageView
                    android:id="@+id/iv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_email" />

                <TextView
                    android:id="@+id/tvEmail"
                    style="@style/ProfileTextTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/iv_email"
                    android:text="@string/email_title" />

                <EditText
                    android:id="@+id/etEmail"
                    style="@style/ProfileTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvEmail"

                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/iv_email" />

            </RelativeLayout>

            <Button
                android:id="@+id/bAddBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/add_birthday_to_calendar"
                android:textColor="@color/white" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>